@startuml
title TAF Lab - UI and API Class Diagram

skinparam shadowing false
skinparam classAttributeIconSize 0

class BasePage {
  #driver : WebDriver
  #config : ExecutionConfig
  #waitUtils : WaitUtils
  +isLoaded() : boolean
  +cookieConsent() : CookieConsentComponent
  +currentUrl() : String
  +title() : String
}

class HomePage {
  +open() : HomePage
  +isHeroBannerVisible() : boolean
  +isLoggedInAs(userName: String) : boolean
  +header() : HeaderComponent
  +openLoginPage() : LoginPage
  +openProductsPage() : ProductsPage
}

class LoginPage {
  +open() : LoginPage
  +enterLoginEmail(email: String) : LoginPage
  +enterLoginPassword(password: String) : LoginPage
  +submitLogin() : HomePage
  +enterSignupName(name: String) : LoginPage
  +enterSignupEmail(email: String) : LoginPage
  +startSignup() : SignupPage
}

class SignupPage {
  +fillAccountDetails(user: User) : SignupPage
  +submitAccountCreation() : AccountCreatedPage
}

class ProductsPage {
  +open() : ProductsPage
  +hasVisibleProducts() : boolean
  +searchFor(searchTerm: String) : ProductsPage
  +isSearchResultsVisible() : boolean
  +containsVisibleProductNamed(productName: String) : boolean
}

class AccountCreatedPage {
  +confirmationMessage() : String
  +continueToHomePage() : HomePage
}

class HeaderComponent {
  +isLogoVisible() : boolean
  +hasCoreNavigationLinks() : boolean
  +openLogin() : void
  +openProducts() : void
  +isLoggedInAs(userName: String) : boolean
}

class CookieConsentComponent {
  +acceptIfPresent() : void
}

class SignupFlow {
  -loginPage : LoginPage
  +register(user: User) : AccountCreatedPage
}

class AutomationExerciseApiClient {
  +get(path: String, queryParams: Map) : Response
  +postForm(path: String, formParams: Map) : Response
  +putForm(path: String, formParams: Map) : Response
  +deleteForm(path: String, formParams: Map) : Response
}

class ProductApiService {
  +getAllProductsResponse() : Response
  +getAllProducts() : ProductsResponse
  +parseProducts(response: Response) : ProductsResponse
  +searchProducts(searchTerm: String) : Response
}

class UserApiService {
  +createUser(user: User) : ApiResponse
  +deleteUser(email: String, password: String) : ApiResponse
  +getUserByEmailResponse(email: String) : Response
}

class ApiAssertions {
  +assertStatusCode(response: Response, expectedStatusCode: int) : void
  +assertResponseCode(response: ProductsResponse, expectedResponseCode: int) : void
  +assertProductsPresent(response: ProductsResponse) : void
  +assertProductHasCoreFields(product: Product) : void
  +assertMatchesSchema(response: Response, schemaPath: String) : void
}

class UiAssertions {
  +assertTrue(condition: boolean, message: String) : void
  +assertContains(actual: String, expectedFragment: String, message: String) : void
}

class BaseUiTest

class HomePageSmokeTest

class GetProductsApiTest

class User
class Product
class ProductsResponse
class ApiResponse

BasePage <|-- HomePage
BasePage <|-- LoginPage
BasePage <|-- SignupPage
BasePage <|-- ProductsPage
BasePage <|-- AccountCreatedPage
BasePage <|-- HeaderComponent
BasePage <|-- CookieConsentComponent

HomePage --> HeaderComponent
HomePage --> CookieConsentComponent
HomePage --> LoginPage
HomePage --> ProductsPage
LoginPage --> SignupPage
SignupPage --> AccountCreatedPage
SignupFlow --> LoginPage
SignupFlow --> SignupPage
SignupFlow --> AccountCreatedPage
SignupFlow --> User

ProductApiService --> AutomationExerciseApiClient
ProductApiService --> ProductsResponse
UserApiService --> AutomationExerciseApiClient
UserApiService --> ApiResponse
ProductsResponse "1" o-- "*" Product

HomePageSmokeTest --|> BaseUiTest
HomePageSmokeTest --> HomePage
HomePageSmokeTest --> UiAssertions
GetProductsApiTest --> ProductApiService
GetProductsApiTest --> ApiAssertions

note right of SignupFlow
Reusable signup orchestration exists today.
Its broader traceability and state handoff
are modeled as V1 documentation concerns.
end note

@enduml
